[gd_scene load_steps=27 format=3 uid="uid://dmqdct0nyaq3b"]

[ext_resource type="Script" uid="uid://coy7fvij2yr3n" path="res://White_blood_cell_enemy/white_blood_cell_enemy.gd" id="1_1hlju"]
[ext_resource type="Texture2D" uid="uid://c2rvd0ilvmtko" path="res://Assetes/enemy_idle_1.png" id="1_or6mf"]
[ext_resource type="Texture2D" uid="uid://cmb51q1jmn4hu" path="res://Assetes/enemy_idle_2.png" id="2_6y52t"]
[ext_resource type="Texture2D" uid="uid://bmq0b2oa0vbbc" path="res://Assetes/explode_1.png" id="3_hsutb"]
[ext_resource type="Texture2D" uid="uid://20btl5mfpkwj" path="res://Assetes/explode_2.png" id="4_1hlju"]
[ext_resource type="Texture2D" uid="uid://c3qu681rohmxr" path="res://Assetes/explode_3.png" id="5_7xds7"]
[ext_resource type="Texture2D" uid="uid://cyccstn1l0u1b" path="res://Assetes/explode_4.png" id="6_2lant"]
[ext_resource type="Texture2D" uid="uid://sq04uyybhr2p" path="res://Assetes/explode_5.png" id="7_uxhf5"]
[ext_resource type="Texture2D" uid="uid://cgbiv0wbhojjf" path="res://Assetes/explode_6.png" id="8_vgjml"]
[ext_resource type="Texture2D" uid="uid://dlrq5ktex5n35" path="res://Assetes/explode_7.png" id="9_w3i81"]
[ext_resource type="Texture2D" uid="uid://d3n2kjknc2bu8" path="res://Assetes/explode_8.png" id="10_sdmr5"]
[ext_resource type="Texture2D" uid="uid://dxijegvlx8ax8" path="res://Assetes/explode_9.png" id="11_s3p82"]
[ext_resource type="Texture2D" uid="uid://1ddikfilqihe" path="res://Assetes/explode_10.png" id="12_41va1"]
[ext_resource type="AudioStream" uid="uid://bja4i6vq5huox" path="res://Assetes/Music/police_chase.wav" id="14_7xds7"]
[ext_resource type="Texture2D" uid="uid://dhoxr2wkukiwg" path="res://Assetes/chakalaka.png" id="15_sdmr5"]
[ext_resource type="Texture2D" uid="uid://buid4iyaf678m" path="res://Assetes/chakalaka_flipped.png" id="16_s3p82"]
[ext_resource type="Texture2D" uid="uid://dv1f8hp16dppg" path="res://Assetes/chakalaka_flipped2.png" id="17_41va1"]
[ext_resource type="Texture2D" uid="uid://vjmma32s0tik" path="res://Assetes/chakalaka_2.png" id="18_itv3l"]
[ext_resource type="Texture2D" uid="uid://by3e2v1axm6i2" path="res://Assetes/expmark.png" id="19_t1twq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xds7"]
size = Vector2(254, 142)

[sub_resource type="SpriteFrames" id="SpriteFrames_lk5io"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_or6mf")
}, {
"duration": 1.0,
"texture": ExtResource("2_6y52t")
}],
"loop": true,
"name": &"chase",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hsutb")
}, {
"duration": 1.0,
"texture": ExtResource("4_1hlju")
}, {
"duration": 1.0,
"texture": ExtResource("5_7xds7")
}, {
"duration": 1.0,
"texture": ExtResource("6_2lant")
}, {
"duration": 1.0,
"texture": ExtResource("7_uxhf5")
}, {
"duration": 1.0,
"texture": ExtResource("8_vgjml")
}, {
"duration": 1.0,
"texture": ExtResource("9_w3i81")
}, {
"duration": 1.0,
"texture": ExtResource("10_sdmr5")
}, {
"duration": 1.0,
"texture": ExtResource("11_s3p82")
}, {
"duration": 1.0,
"texture": ExtResource("12_41va1")
}],
"loop": true,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_or6mf")
}, {
"duration": 1.0,
"texture": ExtResource("2_6y52t")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdmr5"]
size = Vector2(42, 36)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sdmr5"]
radius = 11.0
height = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1hlju"]
size = Vector2(28, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3p82"]
size = Vector2(39, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqde3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_sdmr5")
}, {
"duration": 1.0,
"texture": ExtResource("16_s3p82")
}, {
"duration": 1.0,
"texture": ExtResource("17_41va1")
}, {
"duration": 1.0,
"texture": ExtResource("18_itv3l")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="White_blood_cell_enemy" type="CharacterBody2D"]
script = ExtResource("1_1hlju")

[node name="Player_Search_Zone" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_Search_Zone"]
position = Vector2(-1, -43)
shape = SubResource("RectangleShape2D_7xds7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -1)
sprite_frames = SubResource("SpriteFrames_lk5io")
autoplay = "default"
frame_progress = 0.107756

[node name="PhysicalCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_sdmr5")

[node name="PhysicalCollider2" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_sdmr5")

[node name="hit_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_1hlju")

[node name="damage_player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_player"]
position = Vector2(-3.27835e-07, 4.5)
rotation = -1.5708
shape = SubResource("RectangleShape2D_s3p82")

[node name="Timer" type="Timer" parent="damage_player"]
wait_time = 0.3
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_7xds7")
volume_db = 10.0
pitch_scale = 2.0
max_distance = 200.0
bus = &"Effects"

[node name="Siren" type="AnimatedSprite2D" parent="."]
visible = false
z_index = -2
position = Vector2(0, -40)
scale = Vector2(0.28125, 0.28125)
sprite_frames = SubResource("SpriteFrames_qqde3")
autoplay = "default"
frame_progress = 0.588487

[node name="exclemation_sign" type="Sprite2D" parent="Siren"]
modulate = Color(1, 1, 1, 0.545098)
z_index = -2
position = Vector2(-67.5556, 56.8889)
rotation = -0.290045
scale = Vector2(1.83333, 1.61111)
texture = ExtResource("19_t1twq")

[connection signal="body_entered" from="Player_Search_Zone" to="." method="_on_player_search_zone_body_entered"]
[connection signal="body_exited" from="Player_Search_Zone" to="." method="_on_player_search_zone_body_exited"]
[connection signal="body_entered" from="hit_box" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="damage_player" to="." method="_on_damage_player_body_entered"]
[connection signal="body_exited" from="damage_player" to="." method="_on_damage_player_body_exited"]
[connection signal="body_shape_entered" from="damage_player" to="." method="_on_damage_player_body_shape_entered"]
